--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,13 +1,11 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Smiler</title>
-    </head>
-    <body>
-        Hello!
-    </body>
-</html>
+{{!< main}}
+<main class="main">
+    <ul class="dialogs">
+         {{#each dialogs}}
+            {{> 'dialog/dialog'}}
+        {{/each}}
+    </ul>
+    <div class="history">
+
+    </div>
+</main>
