--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -1,7 +1,7 @@
-{{!< main}}
+{{!< main/main}}
 <main class="main">
     <ul class="dialogs">
-         {{#each dialogs}}
+        {{#each dialogs}}
             {{> 'dialog/dialog'}}
         {{/each}}
     </ul>
