--- a/src/layouts/auth/auth.hbs
+++ b/src/layouts/auth/auth.hbs
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
 </head>
-    <body class="layout-main">
-        {{{body}}}
+    <body class="layout-auth">
+        <div class="layout-auth__content">
+            {{{body}}}
+        </div>
     </body>
 </html>
