--- a/src/index.hbs
+++ b/src/index.hbs
@@ -13,7 +13,10 @@
         <a href="pages/login/login.hbs">Login Page</a>
     </li>
     <li>
-        <a href="pages/chat/chat.hbs">Chat Page</a>
+        <a href="pages/signin/signin.hbs">Signin Page</a>
+    </li>
+    <li>
+        <a href="./pages/chat/chat.hbs">Chat Page</a>
     </li>
 </ul>
 </body>
