--- a/src/index.hbs
+++ b/src/index.hbs
@@ -18,6 +18,9 @@
     <li>
         <a href="./pages/chat/chat.hbs">Chat Page</a>
     </li>
+    <li>
+        <a href="./pages/chat/chat.hbs">Profile Page</a>
+    </li>
 </ul>
 </body>
 </html>
