--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -3,12 +3,12 @@
     <div class="auth-form__content">
         <h1 class="auth-form__title">Вход</h1>
         <div class="field">
-            <input class="field__input" id="login" type="text" required>
+            <input class="field__input" id="login" type="text" placeholder=" " required>
             <label class="field__label" for="login">Логин</label>
             <div class="field__error">Неверный логин</div>
         </div>
         <div class="field">
-            <input class="field__input" id="pass" type="password" required>
+            <input class="field__input" id="pass" type="password" placeholder=" " required>
             <label class="field__label" for="pass">Пароль</label>
         </div>
     </div>
