--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -1,14 +1,14 @@
 @import "normalize.css";
-
+/* Variables */
+@import "variables.pcss";
+/* Pages */
+@import "../pages/chat/chat.pcss";
 /* Layouts */
 @import "../layouts/auth/auth.pcss";
 
 /* Partials */
 @import '../partials/dialog/dialog.pcss';
 
-:root {
-    --primary-color: #3369F3;
-}
 
 html {
     height: 100%;
@@ -74,11 +74,10 @@ a {
     &__input {
         width: 100%;
         padding: 10px 0;
-        background: none;
         font-size: 13px;
         line-height: 13px;
         border: none;
-        border-radius: 0;
+        background: none;
         border-bottom: 1px solid #3369F3;
         &:focus {
             outline: none;
@@ -87,7 +86,7 @@ a {
                 font-size: 9px;
             }
         }
-        &:valid ~ .field__label {
+        &:not(:placeholder-shown) ~ .field__label {
             top: -4px;
             font-size: 9px;
         }
@@ -96,4 +95,36 @@ a {
     &__error {
         display: none;
     }
+}
+.avatar {
+    background: var(--gray-bg);
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.text-circle {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    font-size: 11px;
+    border-radius: 50%;
+    background: var(--primary-color);
+    color: white;
+}
+.text-muted {
+    color: var(--muted);
+}
+
+.clean-input {
+    background: none;
+    border: none;
+    &:focus {
+        outline: none;
+    }
+}
+
+.list {
+    margin: 0;
+    padding: 0;
 }
