--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -1,30 +1,36 @@
 .chat {
     display: flex;
     height: 100%;
-}
-.chat__aside {
-    max-width: 311px;
-    background: #FBFBFB;
-    padding: 20px 10px 0 10px;
-    border-right: 1px solid var(--borders);
-    box-sizing: border-box;
-    margin-right: 20px;
-    overflow: hidden;
+    &__aside {
+        max-width: 311px;
+        background: #FBFBFB;
+        border-right: 1px solid var(--borders);
+        box-sizing: border-box;
+        margin-right: 20px;
+        overflow: hidden;
+    }
+    &__content {
+
+    }
 }
 .aside-header {
-    text-align: right;
     line-height: 0;
-    margin-bottom: 25px;
+    margin: 0 10px 14px;
+    overflow: hidden;
+    text-align: right;
     &__link {
+        display: inline-block;
         vertical-align: center;
         text-decoration: none;
+        margin: 17px 0;
+        padding: 5px 0;
     }
 }
 .aside-search {
     position: relative;
     background: var(--gray-bg);
-    margin-bottom: 14px;
     border-radius: 5px;
+    box-sizing: border-box;
 
     &__input {
         box-sizing: border-box;
@@ -49,5 +55,30 @@
         align-items: center;
         justify-content: center;
 
+    }
+}
+.aside-dialogs {
+    overflow-y: scroll;
+    height: calc(100% - 100px);
+    box-sizing: border-box;
+    padding: 0 10px;
+    margin: 0;
+}
+
+.custom-scroll {
+    transition: scrollbar-color .3s ease;
+    pointer-events: auto;
+    scrollbar-color: none var(--gray-bg);
+    scrollbar-width: thin;
+    -webkit-overflow-scrolling: touch;
+
+    &::-webkit-scrollbar {
+        width: 4px;
+    }
+    &::-webkit-scrollbar-thumb {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    }
+    &::-webkit-scrollbar-track {
+        background: var(--gray-bg);
     }
 }
