Init chat__content design

--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -30,9 +30,7 @@
     <div class="chat__content">
         <div class="chat__header">
             <div class="chat-info">
-                <div class="avatar">
-                    <img src="https://pickaface.net/gallery/avatar/20140911_184056_617_demo.png" alt="Avatar">
-                </div>
+                    <img class="avatar chat-info__avatar" src="https://pickaface.net/gallery/avatar/20140911_184056_617_demo.png" alt="Avatar">
                 <div class="dialog-title">Вадим</div>
             </div>
             <button class="chat-menu">
