--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -6,11 +6,42 @@
         background: #FBFBFB;
         border-right: 1px solid var(--borders);
         box-sizing: border-box;
-        margin-right: 20px;
         overflow: hidden;
     }
-    &__content {
 
+    &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 0 20px;
+        width: 100%;
+    }
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 0;
+        border-bottom: 1px solid var(--borders);
+        width: 100%;
+    }
+    &__messages {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    &__footer {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        padding: 10px 0;
+        border-top: 1px solid var(--borders);
+    }
+}
+.chat-info {
+    display: flex;
+    align-items: center;
+    &__avatar {
+        width: 34px;
+        height: 34px;
     }
 }
 .aside-header {
