Add profile page

--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -59,7 +59,7 @@
                 </svg>
             </button>
             <div class="chat-input__text">
-                <textarea placeholder="Сообщение" name="input-text" id="input-text" rows="1"></textarea>
+                <textarea placeholder="Сообщение" name="message" id="message" rows="1"></textarea>
             </div>
             <button class="chat-input__send">
                 <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
