Update profile page

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -19,7 +19,7 @@
         <a href="./pages/chat/chat.hbs">Chat Page</a>
     </li>
     <li>
-        <a href="./pages/chat/chat.hbs">Profile Page</a>
+        <a href="./pages/profile/profile.hbs">Profile Page</a>
     </li>
 </ul>
 </body>
