--- a/src/layouts/account/account.pcss
+++ b/src/layouts/account/account.pcss
@@ -1,12 +1,7 @@
 .layout-account {
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
     max-width: 510px;
-    &__content {
-        width: 100%;
-        padding: 30px;
-    }
+    margin: 0 auto;
+
     &__back {
         position: absolute;
         top: 0;
@@ -17,6 +12,7 @@
         align-items: center;
         justify-content: center;
         background: #FBFBFB;
+        border: none;
         border-right: 1px solid var(--borders);
 
     }
