--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -2,14 +2,14 @@
 <form class="form auth-form">
     <div class="auth-form__content">
         <h1 class="auth-form__title">Вход</h1>
-        <div class="field">
-            <input class="field__input" id="login" type="text" placeholder=" " required>
-            <label class="field__label" for="login">Логин</label>
-            <div class="field__error">Неверный логин</div>
+        <div class="auth-field">
+            <input class="auth-field__input" id="login" type="text" placeholder=" " required>
+            <label class="auth-field__label" for="login">Логин</label>
+            <div class="auth-field__error">Неверный логин</div>
         </div>
-        <div class="field">
-            <input class="field__input" id="pass" type="password" placeholder=" " required>
-            <label class="field__label" for="pass">Пароль</label>
+        <div class="auth-field">
+            <input class="auth-field__input" id="pass" type="password" placeholder=" " required>
+            <label class="auth-field__label" for="pass">Пароль</label>
         </div>
     </div>
     <div class="auth-form__footer">
