--- a/src/pages/signin/signin.hbs
+++ b/src/pages/signin/signin.hbs
@@ -2,34 +2,34 @@
 <form class="form auth-form">
     <div class="auth-form__content">
         <h1 class="auth-form__title">Регистрация</h1>
-        <div class="field">
-            <input class="field__input" id="email" type="email" placeholder=" " required>
-            <label class="field__label" for="email">Почта</label>
+        <div class="auth-field">
+            <input class="auth-field__input" id="email" type="email" placeholder=" " required>
+            <label class="auth-field__label" for="email">Почта</label>
         </div>
-        <div class="field">
-            <input class="field__input" id="login" type="text" placeholder=" " required>
-            <label class="field__label" for="login">Логин</label>
-            <div class="field__error">Неверный логин</div>
+        <div class="auth-field">
+            <input class="auth-field__input" id="login" type="text" placeholder=" " required>
+            <label class="auth-field__label" for="login">Логин</label>
+            <div class="auth-field__error">Неверный логин</div>
         </div>
-        <div class="field">
-            <input class="field__input" id="first_name" type="text" placeholder=" " required>
-            <label class="field__label" for="first_name">Имя</label>
+        <div class="auth-field">
+            <input class="auth-field__input" id="first_name" type="text" placeholder=" " required>
+            <label class="auth-field__label" for="first_name">Имя</label>
         </div>
-        <div class="field">
-            <input class="field__input" id="second_name" type="text" placeholder=" " required>
-            <label class="field__label" for="second_name">Фамилия</label>
+        <div class="auth-field">
+            <input class="auth-field__input" id="second_name" type="text" placeholder=" " required>
+            <label class="auth-field__label" for="second_name">Фамилия</label>
         </div>
-        <div class="field">
-            <input class="field__input" id="phone" type="tel" placeholder=" " required>
-            <label class="field__label" for="phone">Телефон</label>
+        <div class="auth-field">
+            <input class="auth-field__input" id="phone" type="tel" placeholder=" " required>
+            <label class="auth-field__label" for="phone">Телефон</label>
         </div>
-        <div class="field">
-            <input class="field__input" id="password" type="password" placeholder=" " required>
-            <label class="field__label" for="password">Пароль</label>
+        <div class="auth-field">
+            <input class="auth-field__input" id="password" type="password" placeholder=" " required>
+            <label class="auth-field__label" for="password">Пароль</label>
         </div>
-        <div class="field">
-            <input class="field__input" id="confirmPassword" type="password" placeholder=" " required>
-            <label class="field__label" for="confirmPassword">Пароль (еще раз)</label>
+        <div class="auth-field">
+            <input class="auth-field__input" id="confirmPassword" type="password" placeholder=" " required>
+            <label class="auth-field__label" for="confirmPassword">Пароль (еще раз)</label>
         </div>
     </div>
     <div class="auth-form__footer">
