Add errors page

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -21,6 +21,12 @@
     <li>
         <a href="./pages/profile/profile.hbs">Profile Page</a>
     </li>
+    <li>
+        <a href="./pages/error/505.hbs">505 Page</a>
+    </li>
+    <li>
+        <a href="./pages/error/404.hbs">404 Page</a>
+    </li>
 </ul>
 </body>
 </html>
