--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -5,6 +5,7 @@
 /* Pages */
 @import "../pages/chat/chat.pcss";
 @import "../pages/profile/profile.pcss";
+@import "../pages/error/error.pcss";
 
 /* Layouts */
 @import "../layouts/auth/auth.pcss";
