ADD styles: add font via font-face

--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -1,6 +1,10 @@
 @import "normalize.css";
+
 /* Variables */
 @import "variables.pcss";
+
+/* Fonts */
+@import "fonts.pcss";
 
 /* Pages */
 @import "../pages/chat/chat.pcss";
@@ -18,7 +22,7 @@
 html {
     height: 100%;
     font-size: 13px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 500;
     color: #1E1E1E;
 }
