DEV Refactor structure

--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -11,12 +11,9 @@
 @import "../pages/profile/profile.pcss";
 @import "../pages/error/error.pcss";
 
-/* Layouts */
-@import "../layouts/auth/auth.pcss";
-@import "../layouts/account/account.pcss";
 
 /* Partials */
-@import '../partials/dialog/dialog.pcss';
+@import '../components/dialog/dialog.pcss';
 
 
 html {
@@ -26,7 +23,7 @@ html {
     font-weight: 500;
     color: #1E1E1E;
 }
-body {
+body, #app {
     height: 100%;
 }
 a {
