--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -12,8 +12,8 @@
 @import "../pages/error/error.pcss";
 
 
-/* Partials */
-@import '../components/dialog/dialog.pcss';
+/* Components */
+@import "auth/auth.pcss";
 
 
 html {
@@ -33,78 +33,6 @@ button {
     cursor: pointer;
 }
 
-.auth-form {
-    min-height: 380px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    &__content {
-        margin-bottom: 30px;
-    }
-    &__title {
-        font-size: 20px;
-        line-height: 20px;
-        text-align: center;
-        color: #1E1E1E;
-        margin: 18px 0 25px 0;
-    }
-    &__submit {
-        margin: 15px 0;
-        color: white;
-        padding: 10px 0;
-        background: var(--primary-color);
-        border-radius: 8px;
-        display: block;
-        border: 0;
-        width: 100%;
-    }
-    &__footer {
-        text-align: center;
-    }
-    &__footer-link {
-        font-size: 11px;
-    }
-}
-
-.auth-field {
-    position: relative;
-    margin-top: 20px;
-    &__label {
-        font-size: 13px;
-        font-weight: normal;
-        position: absolute;
-        pointer-events: none;
-        left: 0px;
-        top: 10px;
-        color: #999999;
-        transition: 300ms ease;
-        transition-property: font-size, top;
-    }
-    &__input {
-        width: 100%;
-        padding: 10px 0;
-        font-size: 13px;
-        line-height: 13px;
-        border: none;
-        background: none;
-        border-bottom: 1px solid #3369F3;
-        &:focus {
-            outline: none;
-            & ~ .auth-field__label {
-                top: -4px;
-                font-size: 9px;
-            }
-        }
-        &:not(:placeholder-shown) ~ .auth-field__label {
-            top: -4px;
-            font-size: 9px;
-        }
-
-    }
-    &__error {
-        display: none;
-    }
-}
 .avatar {
     background: var(--gray-bg);
     border-radius: 50%;
