--- a/src/components/button/button.pcss
+++ b/src/components/button/button.pcss
@@ -1,17 +1,14 @@
-.button {
-  margin: 10px;
-}
-
-.button__button {
-  background: blue;
-  border: none;
-  cursor: pointer;
+.button_default {
+  margin: 15px 0;
   color: white;
-  padding: 15px 32px;
-  font-size: 14px;
-  border-radius: 20px;
+  padding: 10px 0;
+  background: var(--primary-color);
+  border-radius: 8px;
+  display: block;
+  border: 0;
+  min-width: 280px;
+  &:hover {
+    opacity: 0.9;
+  }
 }
 
-.button__button:hover {
-  opacity: 0.8;
-}
