--- a/src/pages/error/505.hbs
+++ b/src/pages/error/505.hbs
@@ -1,5 +1,5 @@
 {{!< main/main}}
-<div class="error">
+<div class="error-page">
     <div class="error__inner">
         <div class="error__title">500</div>
         <div class="error__text">Мы уже фиксим</div>
