--- a/src/components/button/button.pcss
+++ b/src/components/button/button.pcss
@@ -1,14 +1,17 @@
-.button_default {
-  margin: 15px 0;
-  color: white;
-  padding: 10px 0;
-  background: var(--primary-color);
-  border-radius: 8px;
-  display: block;
-  border: 0;
-  min-width: 280px;
-  &:hover {
-    opacity: 0.9;
+.button {
+  &_default {
+    margin: 15px 0;
+    color: white;
+    padding: 10px 0;
+    background: var(--primary-color);
+    border-radius: 8px;
+    display: block;
+    border: 0;
+    min-width: 280px;
+    &:hover {
+      opacity: 0.9;
+    }
   }
 }
+
 
