--- a/src/components/layout/layout.pcss
+++ b/src/components/layout/layout.pcss
@@ -1,4 +1,11 @@
 .layout{
+  &-main {
+    height: 100%;
+    overflow: hidden;
+    &__content {
+      height: 100%;
+    }
+  }
   &-auth {
     margin: 0 auto;
     display: flex;
