--- a/src/components/profile-field/profile-field.pcss
+++ b/src/components/profile-field/profile-field.pcss
@@ -1,6 +1,7 @@
 .profile-field {
   border-top: 1px solid var(--borders);
   position: relative;
+  white-space: nowrap;
   &:first-child {
     border-top: none;
   }
@@ -18,7 +19,6 @@
   }
   &__error {
     left: 100%;
-    width: 100%;
     z-index: 10;
     bottom: 0;
     padding: 12px;
