--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -1,115 +1,118 @@
 .chat {
-    display: flex;
-    height: 100%;
-    &__aside {
-        max-width: 311px;
-        background: #FBFBFB;
-        border-right: 1px solid var(--borders);
-        box-sizing: border-box;
-        overflow: hidden;
-    }
+  display: flex;
+  height: 100%;
+  &__aside {
+    min-width: 311px;
+    width: 311px;
+    background: #FBFBFB;
+    border-right: 1px solid var(--borders);
+    box-sizing: border-box;
+    overflow: hidden;
+  }
 
-    &__content {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        margin: 0 20px;
-        width: 100%;
-    }
-    &__header {
-        display: flex;
-        justify-content: space-between;
-        padding: 10px 0;
-        border-bottom: 1px solid var(--borders);
-        width: 100%;
-    }
-    &__messages {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-    &__footer {
-        display: flex;
-        width: 100%;
-        justify-content: space-between;
-        padding: 10px 0;
-        border-top: 1px solid var(--borders);
-    }
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+  }
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+    margin: 0 20px;
+    border-bottom: 1px solid var(--borders);
+  }
+  &__messages {
+    list-style: none;
+    margin: 0;
+    padding: 0 20px;
+    overflow-y: scroll;
+  }
+  &__footer {
+    padding: 10px 0;
+    margin: 0 20px;
+    border-top: 1px solid var(--borders);
+  }
+}
+.chat-title {
+  margin: 0 10px;
+  font-weight: bolder;
 }
 .chat-info {
-    display: flex;
-    align-items: center;
-    &__avatar {
-        width: 34px;
-        height: 34px;
-    }
+  display: flex;
+  align-items: center;
+  &__avatar {
+    width: 34px;
+    height: 34px;
+  }
 }
 .aside-header {
-    line-height: 0;
-    margin: 0 10px 14px;
-    overflow: hidden;
-    text-align: right;
-    &__link {
-        display: inline-block;
-        vertical-align: center;
-        text-decoration: none;
-        margin: 17px 0;
-        padding: 5px 0;
-    }
+  line-height: 0;
+  margin: 0 10px 14px;
+  overflow: hidden;
+  text-align: right;
+  &__link {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 13px;
+    margin: 17px 0;
+    padding: 5px 0;
+  }
 }
 .aside-search {
-    position: relative;
-    background: var(--gray-bg);
-    border-radius: 5px;
-    box-sizing: border-box;
+  position: relative;
+  background: var(--gray-bg);
+  border-radius: 5px;
+  box-sizing: border-box;
 
-    &__input {
-        box-sizing: border-box;
-        width: 100%;
-        position: relative;
-        height: 32px;
-        background: none;
-        border: none;
-        z-index: 10;
-        padding: 0 10px;
-        &:not(:placeholder-shown), &:focus {
-            background: var(--gray-bg);
-        }
-    }
-    &__label {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+  &__input {
+      box-sizing: border-box;
+      width: 100%;
+      position: relative;
+      height: 32px;
+      background: none;
+      border: none;
+      z-index: 10;
+      padding: 0 10px;
+      &:not(:placeholder-shown), &:focus {
+          background: var(--gray-bg);
+      }
+  }
+  &__label {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-    }
+  }
 }
 .aside-dialogs {
-    overflow-y: scroll;
-    height: calc(100% - 100px);
-    box-sizing: border-box;
-    padding: 0 10px;
-    margin: 0;
+  overflow-y: scroll;
+  height: calc(100% - 100px);
+  box-sizing: border-box;
+  padding: 0 10px;
+  margin: 0;
 }
 
 .custom-scroll {
-    transition: scrollbar-color .3s ease;
-    pointer-events: auto;
-    scrollbar-color: none var(--gray-bg);
-    scrollbar-width: thin;
-    -webkit-overflow-scrolling: touch;
+  transition: scrollbar-color .3s ease;
+  pointer-events: auto;
+  scrollbar-color: none var(--gray-bg);
+  scrollbar-width: thin;
+  -webkit-overflow-scrolling: touch;
 
-    &::-webkit-scrollbar {
-        width: 4px;
-    }
-    &::-webkit-scrollbar-thumb {
-        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    }
-    &::-webkit-scrollbar-track {
-        background: var(--gray-bg);
-    }
+  &::-webkit-scrollbar {
+      width: 4px;
+  }
+  &::-webkit-scrollbar-thumb {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
+  &::-webkit-scrollbar-track {
+      background: var(--gray-bg);
+  }
 }
