--- a/src/components/layout/layout.pcss
+++ b/src/components/layout/layout.pcss
@@ -1,40 +1,39 @@
-.layout{
+.layout {
   &-main {
-    height: 100%;
-    overflow: hidden;
+    height:100%;
+    overflow:hidden;
     &__content {
-      height: 100%;
+      height:100%;
     }
   }
   &-auth {
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    max-width: 340px;
-    height: 100%;
-      &__content {
-        width: 100%;
-        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
-        border-radius: 12px;
-        padding: 30px;
-      }
+    margin:0 auto;
+    display:flex;
+    align-items:center;
+    max-width:340px;
+    height:100%;
+    &__content {
+      width:100%;
+      box-shadow:0 0 6px rgb(0 0 0 / 14%);
+      border-radius:12px;
+      padding:30px;
+    }
   }
   &-profile {
-    max-width: 510px;
-    margin: 0 auto;
+    max-width:510px;
+    margin:0 auto;
   }
   &-back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 64px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #FBFBFB;
-    border: none;
-    border-right: 1px solid var(--borders);
-
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    width:64px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    background:#fbfbfb;
+    border:none;
+    border-right:1px solid var(--borders);
   }
 }
