--- a/src/styles/auth/auth.pcss
+++ b/src/styles/auth/auth.pcss
@@ -1,22 +1,22 @@
 .auth-form {
-  min-height: 380px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  min-height:380px;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
   &__content {
-    margin-bottom: 30px;
+    margin-bottom:30px;
   }
   &__title {
-    font-size: 20px;
-    line-height: 20px;
-    text-align: center;
-    color: #1E1E1E;
-    margin: 18px 0 25px 0;
+    font-size:20px;
+    line-height:20px;
+    text-align:center;
+    color:#1e1e1e;
+    margin:18px 0 25px;
   }
   &__footer {
-    text-align: center;
+    text-align:center;
   }
   &__footer-link {
-    font-size: 11px;
+    font-size:11px;
   }
 }
