--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -1,80 +1,72 @@
-@import "normalize.css";
+@import 'normalize.css';
 
 /* Variables */
-@import "variables.pcss";
+@import 'variables.pcss';
 
 /* Fonts */
-@import "fonts.pcss";
+@import 'fonts.pcss';
 
 /* Pages */
-@import "../pages/error/error.pcss";
-
+@import '../pages/error/error.pcss';
 
 /* Components */
-@import "auth/auth.pcss";
-
-
+@import 'auth/auth.pcss';
 html {
-  height: 100%;
-  font-size: 13px;
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
-  color: #1E1E1E;
+  height:100%;
+  font-size:13px;
+  font-family:Inter, sans-serif;
+  font-weight:500;
+  color:#1e1e1e;
 }
-body, #app {
-  height: 100%;
+body,
+#app {
+  height:100%;
 }
 a {
-  color: var(--primary-color);
+  color:var(--primary-color);
 }
 button {
-  cursor: pointer;
+  cursor:pointer;
   &:focus {
-    outline: none;
+    outline:none;
   }
 }
-
 .avatar {
-  background: var(--gray-bg);
-  border-radius: 50%;
-  overflow: hidden;
+  background:var(--gray-bg);
+  border-radius:50%;
+  overflow:hidden;
 }
-
 .text-circle {
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
-  text-align: center;
-  font-size: 11px;
-  border-radius: 50%;
-  background: var(--primary-color);
-  color: white;
+  width:20px;
+  height:20px;
+  line-height:20px;
+  text-align:center;
+  font-size:11px;
+  border-radius:50%;
+  background:var(--primary-color);
+  color:white;
 }
 .text-muted {
-  color: var(--muted);
+  color:var(--muted);
 }
-
 .text-danger {
-  color: var(--error-color);
+  color:var(--error-color);
 }
-
-
 .clean-input {
-  background: none;
-  border: none;
+  background:none;
+  border:none;
   &:focus {
-      outline: none;
+    outline:none;
   }
 }
 .icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    &_circle {
-        border-radius: 50%;
-        width: 28px;
-        height: 28px;
-        background: var(--primary-color);
-    }
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  &_circle {
+    border-radius:50%;
+    width:28px;
+    height:28px;
+    background:var(--primary-color);
+  }
 }
-
