--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #3369F3;
-    --error-color: #FF2F2F;
-    --black: #1E1E1E;
-    --borders: #EAEAEA;
-    --gray-bg: #EFEFEF;
-    --muted: #999999;
+  --primary-color:#3369f3;
+  --error-color:#ff2f2f;
+  --black:#1e1e1e;
+  --borders:#eaeaea;
+  --gray-bg:#efefef;
+  --muted:#999;
 }
