change CSS color variables

--- a/src/components/auth-field/auth-field.pcss
+++ b/src/components/auth-field/auth-field.pcss
@@ -9,7 +9,7 @@
     pointer-events: none;
     left: 0;
     top: 10px;
-    color: #999;
+    color: var(--gray100);
     transition: 300ms ease;
     transition-property: font-size, top;
   }
@@ -20,7 +20,7 @@
     line-height: 13px;
     border: none;
     background: none;
-    border-bottom: 1px solid #3369f3;
+    border-bottom: 1px solid var(--primary100);
     &:focus {
       outline: none;
       & ~ .auth-field__label {
