--- a/src/components/chat-input/chat-input.pcss
+++ b/src/components/chat-input/chat-input.pcss
@@ -9,7 +9,7 @@
     padding: 10px 20px;
     margin: 0 10px;
     outline: none;
-    background: var(--gray-bg);
+    background: var(--gray70);
     resize: none;
   }
 }
