--- a/src/components/dialog/dialog.pcss
+++ b/src/components/dialog/dialog.pcss
@@ -1,9 +1,9 @@
 .dialog {
   display: flex;
-  border-bottom: 1px solid var(--borders);
+  border-bottom: 1px solid var(--gray80);
   padding: 12px 0;
   &:first-child {
-    border-top: 1px solid var(--borders);
+    border-top: 1px solid var(--gray80);
   }
   &__inner {
     display: flex;
