--- a/src/components/message/message.pcss
+++ b/src/components/message/message.pcss
@@ -6,12 +6,12 @@
     font-size: 20px;
   }
   &_incoming {
-    background: #f8f8f8;
+    background: var(--gray50);
     border-radius: 0 10px 10px;
   }
   &_own {
     margin-left: auto;
-    background: #e4edfd;
+    background: var(--primary50);
     border-radius: 10px 10px 0;
   }
   &__footer {
@@ -21,6 +21,6 @@
   }
   .message-date {
     font-size: 9px;
-    color: var(--muted);
+    color: var(--gray100);
   }
 }
