--- a/src/components/profile-field/profile-field.pcss
+++ b/src/components/profile-field/profile-field.pcss
@@ -1,5 +1,5 @@
 .profile-field {
-  border-top: 1px solid var(--borders);
+  border-top: 1px solid var(--gray80);
   position: relative;
   white-space: nowrap;
   &:first-child {
@@ -10,7 +10,7 @@
     line-height: 39px;
   }
   &__input {
-    color: var(--muted);
+    color: var(--gray100);
     text-align: right;
     outline: none;
     border: none;
