--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -14,7 +14,7 @@
   }
   &__menu-link {
     padding: 12px 0;
-    border-top: 1px solid var(--borders);
+    border-top: 1px solid var(--gray80);
     &:first-child {
       border-top: none;
     }
