--- a/src/styles/auth/auth.pcss
+++ b/src/styles/auth/auth.pcss
@@ -10,7 +10,7 @@
     font-size: 20px;
     line-height: 20px;
     text-align: center;
-    color: #1e1e1e;
+    color: var(--black);
     margin: 18px 0 25px;
   }
   &__footer {
