--- a/src/components/button/button.pcss
+++ b/src/components/button/button.pcss
@@ -3,7 +3,7 @@
     margin: 15px 0;
     color: white;
     padding: 10px 0;
-    background: var(--primary-color);
+    background: var(--primary100);
     border-radius: 8px;
     display: block;
     border: 0;
