--- a/src/components/layout/layout.pcss
+++ b/src/components/layout/layout.pcss
@@ -32,8 +32,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #fbfbfb;
+    background: var(--gray50);
     border: none;
-    border-right: 1px solid var(--borders);
+    border-right: 1px solid var(--gray80);
   }
 }
