--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -4,8 +4,8 @@
   &__aside {
     min-width: 311px;
     width: 311px;
-    background: #fbfbfb;
-    border-right: 1px solid var(--borders);
+    background: var(--gray60);
+    border-right: 1px solid var(--gray80);
     box-sizing: border-box;
     overflow: hidden;
   }
@@ -20,7 +20,7 @@
     justify-content: space-between;
     padding: 10px 0;
     margin: 0 20px;
-    border-bottom: 1px solid var(--borders);
+    border-bottom: 1px solid var(--gray80);
   }
   &__messages {
     list-style: none;
@@ -31,7 +31,7 @@
   &__footer {
     padding: 10px 0;
     margin: 0 20px;
-    border-top: 1px solid var(--borders);
+    border-top: 1px solid var(--gray80);
   }
 }
 .chat-title {
@@ -61,7 +61,7 @@
 }
 .aside-search {
   position: relative;
-  background: var(--gray-bg);
+  background: var(--gray70);
   border-radius: 5px;
   box-sizing: border-box;
   &__input {
@@ -75,7 +75,7 @@
     padding: 0 10px;
     &:not(:placeholder-shown),
     &:focus {
-      background: var(--gray-bg);
+      background: var(--gray70);
     }
   }
   &__label {
@@ -99,7 +99,7 @@
 .custom-scroll {
   transition: scrollbar-color 0.3s ease;
   pointer-events: auto;
-  scrollbar-color: none var(--gray-bg);
+  scrollbar-color: none var(--gray70);
   scrollbar-width: thin;
   -webkit-overflow-scrolling: touch;
   &::-webkit-scrollbar {
@@ -109,6 +109,6 @@
     box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
   }
   &::-webkit-scrollbar-track {
-    background: var(--gray-bg);
+    background: var(--gray70);
   }
 }
