--- a/src/components/error/error.pcss
+++ b/src/components/error/error.pcss
@@ -3,4 +3,8 @@
   color: var(--error);
   font-size: 11px;
   padding-top: 2px;
+  &_common {
+    position: relative;
+    text-align: center;
+  }
 }
