--- a/src/components/layout/layout.pcss
+++ b/src/components/layout/layout.pcss
@@ -36,4 +36,15 @@
     border: none;
     border-right: 1px solid var(--gray80);
   }
+  &_loading {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #fff;
+    opacity: 0.6;
+    text-align: center;
+  }
 }
