--- a/src/pages/profile/profile.pcss
+++ b/src/pages/profile/profile.pcss
@@ -20,7 +20,7 @@
     }
   }
 }
-.edit-avatar {
+.profile__avatar {
   font-size: 0;
   margin: 0;
   padding: 0;
@@ -52,7 +52,7 @@
   }
   &:hover {
     transition: 300ms ease;
-    .edit-avatar__text {
+    .profile__avatar__text {
       opacity: 1;
     }
   }
