--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -6,9 +6,6 @@
 /* Fonts */
 @import 'fonts.pcss';
 
-/* Pages */
-@import '../pages/error/error.pcss';
-
 /* Components */
 @import 'auth/auth.pcss';
 html {
@@ -35,6 +32,9 @@ button {
   background: var(--gray70);
   border-radius: 50%;
   overflow: hidden;
+}
+.text-center {
+  text-align: center;
 }
 .text-circle {
   width: 20px;
