--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -3,6 +3,7 @@
   --primary50: #e4edfd;
   --error: #ff2f2f;
   --black: #1e1e1e;
+  --transparent: #1e1e1e6b;
   --gray100: #999999;
   --gray80: #eaeaea;
   --gray70: #efefef;
