--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -57,6 +57,9 @@
     font-size: 13px;
     margin: 17px 0;
     padding: 5px 0;
+    a {
+      text-decoration: none;
+    }
   }
 }
 .aside-search {
