--- a/src/components/button-icon/button-icon.pcss
+++ b/src/components/button-icon/button-icon.pcss
@@ -1,7 +1,13 @@
 .button {
-  &_icon {
+  &-icon {
     border-radius: 50%;
     background: none;
     border: none;
+    &__text {
+      font-weight: bold;
+      color: var(--gray100);
+      display: inline-block;
+      padding: 4px;
+    }
   }
 }
