--- a/src/components/dialog/dialog.pcss
+++ b/src/components/dialog/dialog.pcss
@@ -2,6 +2,7 @@
   display: flex;
   border-bottom: 1px solid var(--gray80);
   padding: 12px 0;
+  cursor: pointer;
   &:first-child {
     border-top: 1px solid var(--gray80);
   }
