--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -15,6 +15,11 @@
     justify-content: space-between;
     width: 100%;
   }
+  &__hello {
+    position: relative;
+    top: 50%;
+    align-self: center;
+  }
   &__header {
     display: flex;
     justify-content: space-between;
@@ -48,15 +53,16 @@
 }
 .aside-header {
   line-height: 0;
-  margin: 0 10px 14px;
+  margin: 17px 10px;
   overflow: hidden;
   text-align: right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   &__link {
     display: inline-block;
     text-decoration: none;
     font-size: 13px;
-    margin: 17px 0;
-    padding: 5px 0;
     a {
       text-decoration: none;
     }
@@ -67,6 +73,7 @@
   background: var(--gray70);
   border-radius: 5px;
   box-sizing: border-box;
+  margin: 0 10px 17px;
   &__input {
     box-sizing: border-box;
     width: 100%;
