--- a/src/components/dialog/dialog.pcss
+++ b/src/components/dialog/dialog.pcss
@@ -1,10 +1,16 @@
 .dialog {
   display: flex;
   border-bottom: 1px solid var(--gray80);
-  padding: 12px 0;
+  padding: 12px 10px;
   cursor: pointer;
+  &:hover {
+    background: var(--gray80);
+  }
   &:first-child {
     border-top: 1px solid var(--gray80);
+  }
+  &_current {
+    background: var(--gray80);
   }
   &__inner {
     display: flex;
