--- a/src/pages/chat/chat.pcss
+++ b/src/pages/chat/chat.pcss
@@ -103,7 +103,7 @@
   overflow-y: scroll;
   height: calc(100% - 100px);
   box-sizing: border-box;
-  padding: 0 10px;
+  padding: 0;
   margin: 0;
 }
 .custom-scroll {
