--- a/src/components/popup/popup.pcss
+++ b/src/components/popup/popup.pcss
@@ -6,6 +6,9 @@
   right: 0;
   left: 0;
   top: 0;
+  &_hidden {
+    display: none;
+  }
   &__content {
     position: absolute;
     box-shadow: 0 0 6px rgb(0 0 0 / 14%);
