--- a/src/styles/dropsown.pcss
+++ b/src/styles/dropsown.pcss
@@ -6,7 +6,7 @@
 .dd-button {
   display: inline-block;
   cursor: pointer;
-  padding: 5 10px;
+  padding: 5px 10px;
 }
 .dd-input {
   display: none;
